font-family-upd...

--- a/style.css
+++ b/style.css
@@ -48,7 +48,7 @@ table {
 }
 /* ******************************************MAIN-CODE******************************************************** */
 body{
-    font-family: cursive;
+    font-family: Nunito;
 }
 .padding{
     padding: 50px;
