--- a/style.css
+++ b/style.css
@@ -53,10 +53,20 @@ body{
 .padding{
     padding: 50px;
 }
+.toggle-btn{
+    width:2%;
+    display: none;
+}
+.toggle{
+    height: 5px;
+    width: 100%;
+    background-color: #FFFFFF;
+    margin-bottom: 3px;
+}
 /* ---------------------- */
 .main{
     background-color: #5A3EBF;
-    background-image: url(./images/main.jpg) /*,linear gradient(#372AAF)*/;
+    background-image: url(./images/main.jpg) ;
     width: 100%;
     height:700px;
     background-repeat: no-repeat;
@@ -362,19 +372,19 @@ footer p{
  */
 
 @media screen and (max-device-width:768px), screen and (max-width:768px){
-    header{
-        display: flex;
-    }
+/*    header{
+        display: block;
+        text-align: center;
+    }*/
     nav{
-      /*  background-color: #3827AC;*/
+        display: none;
     }
-    nav a{
-        display:flex;
-        flex-direction: column;
-       padding-bottom: 20px;
+    .toggle-btn{
+        display: block;
     }
     .main{
         height: auto;
+        width: 100%;
     }
     .main_head{
         /* background-color: #4736C3; */
